# aiogram_tool

./: .gitignore  LICENSE.md  README.md  pyproject.toml  updates.md
aiogram_tool/depend/: __init__.py  depend.py  setup.py
aiogram_tool/depend/components/: __init__.py  exit.py  filter.py  handler.py  inner_middleware.py  middleware.py  outer_middleware.py
aiogram_tool/depend/types/: enums.py  schema.py
aiogram_tool/depend/utils/: depend_scope.py  explore_obj.py  inject.py
aiogram_tool/limit/: __init__.py  limit.py  setup.py
aiogram_tool/limit/storage/: redis_storage.py
aiogram_tool/limit/utils/: __init__.py  callback.py
aiotool/depend/: depend.py
aiotool/depend/components/: filter.py
aiotool/limit/: __init__.py  limit.py  setup.py
aiotool/limit/storage/: __init__.py  abstract_storage.py  memory_storage.py
docs/en/: depend.md  limit.md
docs/limit/ru/: limit.md
docs/ru/: depend.md  limit.md
examples/depend/: arguments.py  async_generator.py  callable_class.py  default.py  depend_exit.py  depend_filter.py  depend_handler.py  override_depend.py  scopes.py  sub_depend.py  sync_generator.py
examples/limit/: all_users.py  answer_callback.py  default.py  storage.py
