[project]
name = "aiogram_tool"
version = "1.0.1"
description = "Tools which doing work with aiogram simple"
authors = [
    {name = "Vlad_shayzi1",email = "tecnomega@mail.ru"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "redis (>=6.2.0,<7.0.0)",
    "aiogram (>=3.21.0,<4.0.0)"
]
keywords = [
    "aiogram",
    "rate",
    "throttling",
    "limit",
    "dependency-injection",
    "depends",
    "cooldown",
    "delay"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
